# OTUS-HW-2

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
include/: filter.hpp  ip.hpp
src/: ip.cpp  main.cpp
test/scripts/: out_equality_test.sh
test/src/: test.cpp
